--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+
+    "codemirror": "^6.0.1",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.3.2",
+
+    "marked": "^15.0.6",
+    
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
