--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.3.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -20,14 +22,10 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-
     "codemirror": "^6.0.1",
-    "@codemirror/lang-java": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.3.2",
-
-    "marked": "^15.0.6",
-    
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.471.1",
+    "marked": "^15.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
