--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.471.1",
     "marked": "^15.0.6",
+    "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
