--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.4",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.475.0",
     "marked": "^15.0.6",
