--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.475.0",
     "marked": "^15.0.6",
+    "monaco-editor": "^0.52.2",
+    "postcss": "^8.5.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.2",
     "react-split": "^2.0.14",
     "react-split-pane": "^0.1.92",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -66,9 +70,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "monaco-editor": "^0.52.2",
-    "postcss": "^8.5.0",
-    "react-day-picker": "^9.5.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
