--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -30,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@stomp/stompjs": "^7.0.1",
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -44,7 +46,7 @@
     "monaco-editor": "^0.52.2",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
@@ -52,6 +54,7 @@
     "react-split": "^2.0.14",
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.6.1",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
