--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.475.0",
     "marked": "^15.0.6",
     "monaco-editor": "^0.52.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -55,6 +56,7 @@
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.6.1",
     "sockjs-client": "^1.6.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
