--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "^0.475.0",
     "marked": "^15.0.6",
     "monaco-editor": "^0.52.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -49,9 +50,11 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.2",
+    "react-select": "^5.10.1",
     "react-split": "^2.0.14",
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.6.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
