--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stomp/stompjs": "^7.0.1",
-    "@tanstack/react-query": "^5.66.9",
-    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.0.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.4",
     "highlight.js": "^11.11.1",
@@ -46,6 +44,7 @@
     "monaco-editor": "^0.52.2",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.0",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -53,8 +52,6 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.2",
     "react-select": "^5.10.1",
-    "react-split": "^2.0.14",
-    "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.6.1",
     "sockjs-client": "^1.6.1",
     "sonner": "^2.0.1",
