--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,17 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 80;
-    listen [::]:80;
+    listen [::]:80 ;
     server_name localhost;
+
+    # ssl_protocols TLSv1.2 TLSv1.3;
+    # ssl_ciphers HIGH:!aNULL:!MD5;
+    # ssl_prefer_server_ciphers on;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-            try_files $uri /index.html$is_args$args =404;
+try_files $uri /index.html$is_args$args;
     }
 
 # location / {
@@ -31,7 +35,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-NginX-Proxy true;
 
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:80' always;
+        add_header 'Access-Control-Allow-Origin' 'https://localhost:80' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
         add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -55,7 +59,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-NginX-Proxy true;
 
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:80' always;
+        add_header 'Access-Control-Allow-Origin' 'https://localhost:80' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
         add_header 'Access-Control-Allow-Credentials' 'true' always;
